package sentinel

import (
	"context"
	"errors"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/mock"
	"github.com/upmio/unit-operator/pkg/agent/app/common"
	"go.uber.org/zap/zaptest"
	"os"
	"sigs.k8s.io/controller-runtime/pkg/client"
	"testing"
)

// MockServiceLifecycle 模拟服务生命周期管理
type MockServiceLifecycle struct {
	mock.Mock
}

func (m *MockServiceLifecycle) CheckServiceStatus(ctx context.Context, req interface{}) (interface{}, error) {
	args := m.Called(ctx, req)
	return args.Get(0), args.Error(1)
}

func (m *MockServiceLifecycle) CheckServiceStopped(ctx context.Context, req interface{}) (interface{}, error) {
	args := m.Called(ctx, req)
	return args.Get(0), args.Error(1)
}

func (m *MockServiceLifecycle) StartService(ctx context.Context, req interface{}) (interface{}, error) {
	args := m.Called(ctx, req)
	return args.Get(0), args.Error(1)
}

func (m *MockServiceLifecycle) StopService(ctx context.Context, req interface{}) (interface{}, error) {
	args := m.Called(ctx, req)
	return args.Get(0), args.Error(1)
}

func (m *MockServiceLifecycle) RestartService(ctx context.Context, req interface{}) (interface{}, error) {
	args := m.Called(ctx, req)
	return args.Get(0), args.Error(1)
}

// Mock dependencies
type MockGrpcApp struct{}

// Implement necessary interfaces for mocks
func (m *MockGrpcApp) SomeMethod() {}

// TestSentinelServiceImplementation 测试 Redis Sentinel 服务实现
func TestSentinelServiceImplementation(t *testing.T) {
	service := &service{
		logger: zaptest.NewLogger(t).Sugar(),
	}

	// 测试服务基本接口
	t.Run("service interface implementation", func(t *testing.T) {
		assert.Equal(t, appName, service.Name())
		assert.NotNil(t, service.logger)
	})
}

// TestNewSentinelResponse 测试响应构造函数
func TestNewSentinelResponse(t *testing.T) {
	tests := []struct {
		name     string
		message  string
		expected string
	}{
		{
			name:     "success message",
			message:  "Sentinel failover completed successfully",
			expected: "Sentinel failover completed successfully",
		},
		{
			name:     "error message",
			message:  "Sentinel configuration failed: invalid master name",
			expected: "Sentinel configuration failed: invalid master name",
		},
		{
			name:     "empty message",
			message:  "",
			expected: "",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			response := newSentinelResponse(tt.message)
			assert.NotNil(t, response)
			assert.Equal(t, tt.expected, response.Message)
		})
	}
}

// TestSentinelEnvironmentConfig 测试 Sentinel 环境配置
func TestSentinelEnvironmentConfig(t *testing.T) {
	tests := []struct {
		name        string
		key         string
		setValue    string
		expectError bool
		expected    string
	}{
		{
			name:        "existing environment variable",
			key:         "SENTINEL_CONFIG_DIR",
			setValue:    "/etc/redis-sentinel",
			expectError: false,
			expected:    "/etc/redis-sentinel",
		},
		{
			name:        "non-existing environment variable",
			key:         "SENTINEL_NON_EXISTING",
			setValue:    "",
			expectError: true,
			expected:    "",
		},
		{
			name:        "empty environment variable",
			key:         "SENTINEL_EMPTY",
			setValue:    "",
			expectError: true,
			expected:    "",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// 设置环境变量
			if tt.setValue != "" {
				t.Setenv(tt.key, tt.setValue)
			}

			result, err := getSentinelEnvVar(tt.key)

			if tt.expectError {
				assert.Error(t, err)
				assert.Contains(t, err.Error(), "environment variable")
				assert.Contains(t, err.Error(), "is not set")
			} else {
				assert.NoError(t, err)
				assert.Equal(t, tt.expected, result)
			}
		})
	}
}

// TestErrorHandlingPatterns 测试错误处理模式
func TestErrorHandlingPatterns(t *testing.T) {
	service := &service{
		logger: zaptest.NewLogger(t).Sugar(),
	}

	tests := []struct {
		name         string
		operation    string
		err          error
		expectedType string
	}{
		{
			name:         "sentinel connection error",
			operation:    "sentinel connect",
			err:          errors.New("connection refused"),
			expectedType: "connection error",
		},
		{
			name:         "failover error",
			operation:    "failover",
			err:          errors.New("master not reachable"),
			expectedType: "failover error",
		},
		{
			name:         "timeout error",
			operation:    "monitor",
			err:          context.DeadlineExceeded,
			expectedType: "timeout error",
		},
		{
			name:         "configuration error",
			operation:    "config",
			err:          errors.New("invalid configuration parameter"),
			expectedType: "config error",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			// 测试错误处理和响应创建
			response, err := common.LogAndReturnError(
				service.logger,
				newSentinelResponse,
				"operation failed: "+tt.operation,
				tt.err,
			)

			assert.Error(t, err)
			assert.NotNil(t, response)
			assert.Contains(t, response.Message, tt.operation)
			assert.Contains(t, err.Error(), tt.operation)
		})
	}
}

// BenchmarkNewSentinelResponse 性能测试
func BenchmarkNewSentinelResponse(b *testing.B) {
	message := "Sentinel operation completed successfully"

	b.ResetTimer()
	for i := 0; i < b.N; i++ {
		_ = newSentinelResponse(message)
	}
}

//func TestServiceConfig(t *testing.T) {
//	// Test cases
//	tests := []struct {
//		name           string
//		mockGrpcApp    interface{}
//		mockCompose   func() (client.Client, error)
//		mockRecorder   func() (event.IEventRecorder, error)
//		expectedError  error
//		expectedLogger string
//	}{
//		//{
//		//	name:        "Success Case",
//		//	mockGrpcApp: &MockGrpcApp{},
//		//	//mockCompose: func() (client.Client, error) {
//		//	//	return &MockComposeClient{}, nil
//		//	//},
//		//	//mockRecorder: func() (event.IEventRecorder, error) {
//		//	//	return &MockEventRecorder{}, nil
//		//	//},
//		//	expectedError:  nil,
//		//	expectedLogger: "[SENTINEL]",
//		//},
//		{
//			name:        "Error in GetComposeClient",
//			mockGrpcApp: &MockGrpcApp{},
//			mockCompose: func() (client.Client, error) {
//				return nil, errors.New("failed to get Compose client")
//			},
//			//mockRecorder: func() (event.IEventRecorder, error) {
//			//	return &MockEventRecorder{}, nil
//			//},
//			expectedError: errors.New("failed to get Compose client"),
//		},
//		{
//			name:        "Error in Event Recorder",
//			mockGrpcApp: &MockGrpcApp{},
//			//mockCompose: func() (client.Client, error) {
//			//	return &MockComposeClient{}, nil
//			//},
//			mockRecorder: func() (event.IEventRecorder, error) {
//				return nil, errors.New("failed to create event recorder")
//			},
//			expectedError: errors.New("failed to create event recorder"),
//		},
//		{
//			name:        "Nil gRPC App",
//			mockGrpcApp: nil,
//			//mockCompose: func() (client.Client, error) {
//			//	return &MockComposeClient{}, nil
//			//},
//			//mockRecorder: func() (event.IEventRecorder, error) {
//			//	return &MockEventRecorder{}, nil
//			//},
//			expectedError: errors.New("gRPC app is nil"),
//		},
//		{
//			name:        "Logger Initialization",
//			mockGrpcApp: &MockGrpcApp{},
//			//mockCompose: func() (client.Client, error) {
//			//	return &MockComposeClient{}, nil
//			//},
//			//mockRecorder: func() (event.IEventRecorder, error) {
//			//	return &MockEventRecorder{}, nil
//			//},
//			expectedError:  nil,
//			expectedLogger: "[SENTINEL]",
//		},
//		{
//			name:        "Empty Event Recorder",
//			mockGrpcApp: &MockGrpcApp{},
//			//mockCompose: func() (client.Client, error) {
//			//	return &MockComposeClient{}, nil
//			//},
//			mockRecorder: func() (event.IEventRecorder, error) {
//				return nil, nil
//			},
//			expectedError: errors.New("event recorder is nil"),
//		},
//	}
//
//	for _, tt := range tests {
//		t.Run(tt.name, func(t *testing.T) {
//			// Setup mock functions
//			//appGetGrpcApp = func(name string) interface{} {
//			//	return tt.mockGrpcApp
//			//}
//			//confGetConf = func() ConfInterface {
//			//	return &MockConf{
//			//		kube: &MockKube{
//			//			clientFunc: tt.mockCompose,
//			//		},
//			//	}
//			//}
//			//eventNewIEventRecorder = tt.mockRecorder
//
//			// Initialize service and inject dependencies
//			svc := &service{}
//
//			// Use zaptest.NewLogger to create a test logger
//			svc.logger = zaptest.NewLogger(t).Sugar()
//
//			err := svc.Config()
//
//			// Verify expected error
//			if tt.expectedError != nil {
//				assert.Error(t, err)
//				assert.Equal(t, tt.expectedError.Error(), err.Error())
//			} else {
//				assert.NoError(t, err)
//			}
//
//			// Verify logger name if applicable
//			if tt.expectedLogger != "" {
//				//assert.Contains(t, svc.logger.Desugar().Core().String(), tt.expectedLogger)
//			}
//		})
//	}
//}

type MockComposeClient struct {
	GetFunc    func(ctx context.Context, key client.ObjectKey, obj client.Object) error
	UpdateFunc func(ctx context.Context, obj client.Object) error
}

func (m *MockComposeClient) Get(ctx context.Context, key client.ObjectKey, obj client.Object) error {
	return m.GetFunc(ctx, key, obj)
}

func (m *MockComposeClient) Update(ctx context.Context, obj client.Object) error {
	return m.UpdateFunc(ctx, obj)
}

type MockEventRecorder struct {
	SendNormalEventToUnitFunc  func(unitName, namespace, event, message string)
	SendWarningEventToUnitFunc func(unitName, namespace, event, message string)
}

func (m *MockEventRecorder) SendNormalEventToUnit(unitName, namespace, event, message string) {
	m.SendNormalEventToUnitFunc(unitName, namespace, event, message)
}

func (m *MockEventRecorder) SendWarningEventToUnit(unitName, namespace, event, message string) {
	m.SendWarningEventToUnitFunc(unitName, namespace, event, message)
}

//func TestService_UpdateRedisReplication(t *testing.T) {
//	tests := []struct {
//		name             string
//		req              *UpdateRedisReplicationRequest
//		getErr           error
//		updateErr        error
//		expectedErrMsg   string
//		expectedRespMsg  string
//		expectedWarnCall bool
//		expectedNormCall bool
//	}{
//		{
//			name: "Success - Host already matches",
//			req: &UpdateRedisReplicationRequest{
//				RedisReplicationName: "test-redis",
//				Namespace:            "default",
//				MasterHost:           "current-master",
//				SelfUnitName:         "test-unit",
//			},
//			getErr:           nil,
//			expectedRespMsg:  "the source node's host of default/test-redis redis replication is already current-master, no need to update",
//			expectedWarnCall: false,
//			expectedNormCall: true,
//		},
//		{
//			name: "Success - Update required",
//			req: &UpdateRedisReplicationRequest{
//				RedisReplicationName: "test-redis",
//				Namespace:            "default",
//				MasterHost:           "new-master",
//				SelfUnitName:         "test-unit",
//			},
//			getErr:           nil,
//			expectedRespMsg:  "update redis replication success.",
//			expectedWarnCall: false,
//			expectedNormCall: true,
//		},
//		{
//			name: "Failure - Get error",
//			req: &UpdateRedisReplicationRequest{
//				RedisReplicationName: "test-redis",
//				Namespace:            "default",
//				MasterHost:           "current-master",
//				SelfUnitName:         "test-unit",
//			},
//			getErr:           errors.New("get error"),
//			expectedErrMsg:   "get redis replication default/test-redis failed, get error",
//			expectedWarnCall: true,
//			expectedNormCall: false,
//		},
//		{
//			name: "Failure - Update error",
//			req: &UpdateRedisReplicationRequest{
//				RedisReplicationName: "test-redis",
//				Namespace:            "default",
//				MasterHost:           "new-master",
//				SelfUnitName:         "test-unit",
//			},
//			getErr:           nil,
//			updateErr:        errors.New("update error"),
//			expectedErrMsg:   "update redis replication failed, update error",
//			expectedWarnCall: true,
//			expectedNormCall: false,
//		},
//		{
//			name: "Failure - Host not found in replicas",
//			req: &UpdateRedisReplicationRequest{
//				RedisReplicationName: "test-redis",
//				Namespace:            "default",
//				MasterHost:           "unknown-master",
//				SelfUnitName:         "test-unit",
//			},
//			getErr:           nil,
//			expectedErrMsg:   "can't found unknown-master host in redis replication",
//			expectedWarnCall: true,
//			expectedNormCall: false,
//		},
//	}
//
//	for _, tt := range tests {
//		t.Run(tt.name, func(t *testing.T) {
//			//mockClient := &MockComposeClient{
//			//	GetFunc: func(ctx context.Context, key client.ObjectKey, obj client.Object) error {
//			//		if tt.getErr != nil {
//			//			return tt.getErr
//			//		}
//			//		redis := obj.(*Composev1.RedisReplication)
//			//		redis.Spec.Source.Host = "current-master"
//			//		redis.Spec.Replica = Composev1.CommonNodes{
//			//			{Host: "replica1"},
//			//			{Host: "new-master"},
//			//		}
//			//		return nil
//			//	},
//			//	UpdateFunc: func(ctx context.Context, obj client.Object) error {
//			//		return tt.updateErr
//			//	},
//			//}
//
//			warnCalled := false
//			normCalled := false
//			//mockRecorder := &MockEventRecorder{
//			//	SendNormalEventToUnitFunc: func(unitName, namespace, event, message string) {
//			//		normCalled = true
//			//	},
//			//	SendWarningEventToUnitFunc: func(unitName, namespace, event, message string) {
//			//		warnCalled = true
//			//	},
//			//}
//
//			svc := &service{
//				//ComposeClient: mockClient,
//				//recorder:       mockRecorder,
//				logger: zaptest.NewLogger(t).Sugar(),
//			}
//
//			resp, err := svc.UpdateRedisReplication(context.Background(), tt.req)
//
//			if tt.expectedErrMsg != "" {
//				assert.Error(t, err)
//				assert.Contains(t, err.Error(), tt.expectedErrMsg)
//			} else {
//				assert.NoError(t, err)
//				assert.Equal(t, tt.expectedRespMsg, resp.Message)
//			}
//
//			assert.Equal(t, tt.expectedWarnCall, warnCalled)
//			assert.Equal(t, tt.expectedNormCall, normCalled)
//		})
//	}
//}

// getSentinelEnvVar 获取 Sentinel 环境变量
func getSentinelEnvVar(key string) (string, error) {
	value := os.Getenv(key)
	if value == "" {
		return "", errors.New("environment variable " + key + " is not set")
	}
	return value, nil
}
